First third of chapter 3

--- a/reportMaster2/Makefile
+++ b/reportMaster2/Makefile
@@ -1,11 +1,11 @@
 all: main.pdf
 
 main.pdf: *.tex art.bib online.bib ths.bib 
-	pdflatex main.tex
+	pdflatex -shell-escape main.tex
 	biber main
 	#bibtex main
-	pdflatex main.tex
-	pdflatex main.tex
+	pdflatex -shell-escape main.tex
+	pdflatex -shell-escape main.tex
 
 clean: 
 	rm -f *.aux *.log *~ *.bbl *.blg *.dvi *.toc *.pdf *.out *.bcf *.run.xml
